# AutoProver

./: .dockerignore  .gitignore  AICOMPOSER_INFRA.md  README.md  compose.py  pyproject.toml  pyrightconfig.json  tui_pipeline.py
.github/scripts/: sandbox_vm_provision.sh
.github/workflows/: integration-tests.yml  pyright.yml  pytest.yml  sandbox-escape-6.1.yml
certora_autosetup/: certoraRunAutoSolc.py  fixconf.py  fixconf_prechecks.py  parallel_autosetup.py  typechecker_loop.py
certora_autosetup/autosetup/: __init__.py  __main__.py  autosetup.py  cli.py  cli_args.py  types.py
certora_autosetup/build_systems/: __init__.py  base.py  foundry.py  hardhat.py  hardhat_config_extractor.js  manager.py
certora_autosetup/cache/: __init__.py  cache_fs.py  content_cache.py
certora_autosetup/certora/: sanity.spec  trivial.spec
certora_autosetup/conf_runner/: __init__.py  callbacks.py  conf_runner.py  types.py
certora_autosetup/parsers/: __init__.py  access_control.py  base.py  build_system_detector.py  cmdline_parser.py  cvl_summary_parser.py  foundry.py  hardhat.py  method_parser.py  prover_config_parser.py  spec_imports.py  type_analyzer.py
certora_autosetup/reporting/: __init__.py  generate_report.py  json_reporter.py  markdown_reporter.py  reporter.py
certora_autosetup/setup/: auto_munges.py  call_resolution.py  emit_munger.py  function_summaries.json  oz_math_rounding.py  proxy_detection.py  sanity.py  sanity_rule_generator.py  setup_completeness_checker.py  setup_erc7201.py  setup_erc7201_patch.py  setup_prover.py  setup_summaries.py  signature_manager.py  signature_types.py  solidity_import_patch.py  solidity_utils.py  summary_aggregator.py  summary_resolver.py
certora_autosetup/utils/: __init__.py  certora_wget.py  cloud_runner.py  compilation_workarounds.py  config_manager.py  constants.py  contract_dispatcher.py  contract_linker.py  contract_utils.py  enhanced_config_manager.py  file_utils.py  job_problem_fixes.py  job_utils.py  library_harness.py  llm_debug.py  llm_mock.py  llm_util.py  local_runner.py  logger.py  logging_mixin.py  paths.py  progress_display.py  prompt_template.py  prover_arg_names.py  prover_runner.py  prover_usage_ledger.py  remappings.py  replay_llm_local.py  runner_types.py  scope.py  signal_handler.py  solc_version_resolver.py  test_report.md  types.py
composer/: bind.py  certora_env.py
composer/assistant/: codegen_launch.py  natspec_launch.py  types.py
composer/audit/: store.py  types.py
composer/cli/: cache_natspec.py  console_autoprove.py  console_codegen.py  console_foundry.py  natspec_startup.py  tui_autoprove.py  tui_codegen.py  tui_foundry.py  tui_pipeline.py
composer/console/: app.py
composer/core/: edit.py  validation.py
composer/cvl/: tools.py
composer/diagnostics/: handlers.py  jsonl_sink.py  logging_setup.py  timing.py
composer/foundry/: artifacts.py  author.py  entry.py  pipeline.py  report.py  runner.py  state.py
composer/input/: files.py  parsing.py  types.py
composer/io/: context.py  events.py  graph_runner.py  mnemonic_store.py  multi_job.py  stream.py  thread_logging.py
composer/llm/: anthropic.py  openai.py  provider.py  registry.py
composer/natreq/: extractor.py
composer/pipeline/: cli.py  core.py  ptypes.py
composer/prover/: analysis.py  certoraRunWrapper.py  cloud.py  core.py  results.py
composer/rag/: db.py
composer/sandbox/: __init__.py  command.py  config.py  launcher.py  policy.py  recipes.py
composer/scripts/: init-db.sql
composer/spec/: artifacts.py  certoraTypeCheck.py  code_explorer.py  context.py  cvl_generation.py  cvl_research.py  feedback.py  graph_builder.py  prop_inference.py  refinement.py  service_host.py  services.py  system_analysis.py  system_model.py  tool_env.py  types.py  util.py
composer/templates/: application_analysis_macros.j2  application_analysis_prompt.j2  application_analysis_system.j2  application_context.j2  application_context_macro.j2  application_context_new.j2  bug_refinement_chat_system_prompt.j2  crash_recovery_context.j2  cvl_edit_guidance.j2  cvl_tools_system_prompt.j2  doc_ref_author.j2  doc_ref_reader.j2  foundry_property_generation_system_prompt.j2  harness_generation_prompt.j2  harness_generation_system_prompt.j2  interface_generation_prompt.j2  invariant_judge_prompt.j2  invariant_judge_system_prompt.j2  natspec_stub_tools_guidance.j2  nosource_property_generation_prompt.j2  nosource_property_generation_system_prompt.j2  property_analysis_prompt.j2  property_analysis_system_prompt.j2  property_generation_prompt.j2  property_generation_system_prompt.j2  property_judge_prompt.j2  property_judge_system_prompt.j2  req_extraction_prompt.j2  req_judge_prompt.j2  rough_draft_protocol.j2  source_cvl_system_prompt.j2  source_summarization.j2  source_tools_system_prompt.j2  state_analysis_system_prompt.j2  stub_generation_prompt.j2
composer/testing/: harness_tape.py  record_tape.py  ui_harness_autoprove.py  ui_harness_autoprove_Answer.py  ui_harness_autoprove_Counter.py  (+1 more)
docs/: command-sandbox.md
rust/: Cargo.toml
rust/run-confined/: Cargo.toml
rust/run-confined/src/: main.rs
sanity_analyzer/: analysis.py
scripts/: Dockerfile  Dockerfile.sandbox  autoprove  autoprove-entrypoint.sh  autoprove_cache_explorer.py  cache_explorer.py  docker-compose.sandbox.yml  docker-compose.yml  install_solc.py  snapshot_viewer.py
tests/: conftest.py  test_agent_index.py  test_autoprove_integration.py  test_autoprove_report.py  test_autosetup_oz_rounding_integration.py  test_compilation_workarounds.py  test_compiler_flag_reconciliation.py  test_design_doc_finder.py  test_foundry_entry_args.py  test_foundry_runner.py  test_hardhat_config.py  test_oz_math_rounding_unit.py  test_pipeline_result.py  test_prover_options.py  test_remappings.py  test_sandbox.py  test_sandbox_command.py  test_sandbox_config.py  test_sandbox_escape.py  test_sandbox_launcher.py  test_sandbox_run_confined.py  test_sanity_rule_generator.py  test_solc_version_resolver.py  test_summarizer.py  test_summary_resolver.py  test_token_usage.py  test_typechecker_rounding_fix.py
(+84 files in other folders)
