[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-composer"
version = "0.1.0"
description = "AIComposer — a tool for generating verified implementations from documentation and CVL specifications"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Certora Ltd."}
]

dependencies = [
    "graphcore @ git+ssh://git@github.com/Certora/graphcore.git@d427b0f5f039c84c9b170d184d35c352339ddcda",
    "aiohttp>=3.13",
    "attrs>=26.1",
    "Jinja2>=3.1",
    "langgraph-checkpoint-postgres>=3.0",
    "numpy>=2.4",
    "prompt-toolkit>=3.0",
    "psycopg[binary]>=3.2",
    "pydantic>=2.12",
    "questionary>=2.1",
    "rich>=14.3",
    "textual>=8.1",
    "websockets",
    "chromadb>=0.4.0",
    "langgraph-prebuilt==1.0.8",
    "langchain_core<1.3.3"
]

[project.optional-dependencies]
ml = ["sentence-transformers>=5.1", "einops"] # save CI
prover = ["certora_cli"]

[dependency-groups]
test = ["pytest>=9.0", "pytest-asyncio>=1.3", "testcontainers>=4.0"]
ci = ["pyright"]
ragbuild = [
    # duplicated! no way to prevent this, says only language where this nonsense is required
    "sentence-transformers>=5.1",
    "einops",
    "spacy==3.8.7",
    "beautifulsoup4==4.13.5",
    "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85"
]

[tool.uv.sources]
graphcore = { path = "./graphcore", editable = true }

[project.scripts]
cex-analyzer = "analyzer.analysis:main"
ap-trail = "composer.cli.ap_trail:main"
tui-natspec = "composer.cli.tui_pipeline:main"
cache-natspec = "composer.cli.cache_natspec:main"

[tool.setuptools.packages.find]
include = ["composer*", "sanity_analyzer*", "analyzer*"]

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.package-data]
composer = ["templates/*.j2", "scripts/init-db.sql"]
