[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-composer"
version = "0.1.0"
description = "AIComposer — a tool for generating verified implementations from documentation and CVL specifications"
readme = "README.md"
requires-python = ">=3.12"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [
    {name = "Certora Ltd."}
]

dependencies = [
    "graphcore @ git+ssh://git@github.com/Certora/graphcore.git@8b9d320316a2cfbfa775da0a961501539a4124f0",
    "aiohttp>=3.13",
    "attrs>=26.1",
    "Jinja2>=3.1",
    "langgraph-checkpoint-postgres>=3.0",
    "langchain-openai>=1.0",
    "openai>=2.0",
    "numpy>=2.4",
    "prompt-toolkit>=3.0",
    "psycopg[binary]>=3.2",
    "pydantic>=2.12",
    "questionary>=2.1",
    "rich>=14.3",
    "textual>=8.1",
    "websockets",
    "chromadb>=0.4.0",
    "langgraph-prebuilt==1.0.8",
    "langchain_core<1.3.3",
    "certora-prover-cli",
    # certora_autosetup runtime deps (merged in from the AutoSetup repo).
    # einops is provided by the [ml] extra; certora-prover-cli (above) ships the
    # prover_output_utility module AutoSetup imports.
    "tqdm>=4.65.0",
    "anthropic>=0.18.0",
    "openai>=1.50.0",
    "wcmatch>=8.5.0",
    "python-dotenv>=1.0.0",
    "json5>=0.9.0",
    "claude-agent-sdk>=0.1.0",
    "sqlalchemy>=2.0.0",
    "isodate>=0.6.0",
    "fsspec>=2023.1.0",
]

[project.optional-dependencies]
ml = ["sentence-transformers>=5.1", "einops"] # save CI
# Optional S3-backed cache for certora_autosetup (SaaS mode).
s3 = ["s3fs>=2023.1.0"]

# Certora CLI package. certora-cli, certora-cli-beta, and
# certora-cli-beta-mirror are the same tool published under different package
# names — all install the `certora_cli` module, so they are MUTUALLY EXCLUSIVE;
# exactly one extra must be selected at install time (enforced via the
# [tool.uv] conflicts block below). Each extra is named after the package it
# pulls.
certora-cli = ["certora-cli>=8.16.1"]
certora-cli-beta = ["certora-cli-beta>=8.16.1"]
certora-cli-beta-mirror = ["certora-cli-beta-mirror>=8.16.1"]
# Back-compat alias: `prover` == stable channel.
prover = ["ai-composer[certora-cli]"]

# torch flavor — MUTUALLY EXCLUSIVE (see [tool.uv] conflicts), each pinned to
# the matching PyTorch index via [tool.uv.sources] below. The container image
# and any GPU-less host should use `cpu` (avoids pulling the multi-GB CUDA
# runtime into a cloud-prover image); pick `cuda` on a GPU box. With neither
# extra, torch resolves from PyPI (CUDA).
cpu = ["torch"]
cuda = ["torch"]

[dependency-groups]
test = ["pytest>=9.0", "pytest-asyncio>=1.3", "testcontainers>=4.0"]
ci = ["pyright"]
ragbuild = [
    # duplicated! no way to prevent this, says only language where this nonsense is required
    "sentence-transformers>=5.1",
    "einops",
    "spacy==3.8.7",
    "beautifulsoup4==4.13.5",
    "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85",
    # foundry cheatcode mdx -> html conversion (composer.scripts.foundry_process)
    "markdown-it-py>=3.0",
    "mdit-py-plugins>=0.4",
]

[tool.uv]
conflicts = [
    [{ extra = "cpu" }, { extra = "cuda" }],
    [
        { extra = "certora-cli" },
        { extra = "certora-cli-beta" },
        { extra = "certora-cli-beta-mirror" },
    ],
]

[tool.uv.sources]
graphcore = { path = "./graphcore", editable = true }
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu128", extra = "cuda" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.pytest.ini_options]
markers = [
    "expensive: hits the real prover / network — deselect with -m 'not expensive'",
]
# optional but recommended once you're registering marks:
addopts = "--strict-markers"   # a typo'd mark becomes an error, not a silent no-match


[project.scripts]
cex-analyzer = "analyzer.analysis:main"
ap-trail = "composer.cli.ap_trail:main"
console-autoprove = "composer.cli.console_autoprove:main"
tui-autoprove = "composer.cli.tui_autoprove:main"
console-foundry = "composer.cli.console_foundry:main"
tui-foundry = "composer.cli.tui_foundry:main"
autoprove-report-render = "composer.spec.source.report.render:main"
tui-natspec = "composer.cli.tui_pipeline:main"
cache-natspec = "composer.cli.cache_natspec:main"
console-codegen = "composer.cli.console_codegen:main"
tui-codegen = "composer.cli.tui_codegen:main"
# certora_autosetup entry points
certora-autosetup = "certora_autosetup.autosetup.cli:main"
certora-parallel-autosetup = "certora_autosetup.parallel_autosetup:main"
certora-setup-summaries = "certora_autosetup.setup.setup_summaries:main"
certora-setup-erc7201 = "certora_autosetup.setup.setup_erc7201:main"
certora-run-auto-solc = "certora_autosetup.certoraRunAutoSolc:main"
certora-fixconf = "certora_autosetup.fixconf:main"
autosetup = "certora_autosetup.autosetup.cli:main"
fixconf = "certora_autosetup.fixconf:main"

[tool.setuptools.packages.find]
include = ["composer*", "sanity_analyzer*", "analyzer*", "certora_autosetup*"]

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.package-data]
composer = ["templates/*.j2", "scripts/init-db.sql"]
# Bundled CVL summaries, spec templates, mocks and conf templates the prover
# reads directly off disk; ship them with the wheel.
certora_autosetup = [
    "certora/**",
    "**/*.spec",
    "**/*.conf",
    "**/*.sol",
    "**/*.template.sol",
    "**/*.j2",
    "**/*.json",
]
